--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 RESET
 *************
 ***/
-
 * {
     margin: 0;
     padding: 0;
@@ -15,6 +14,22 @@ RESET
 COMMON
 *************
 ***/
+.flex {
+    display: flex;
+}
+
+ul {
+    list-style-type: none;
+}
+
+/***
+*************
+DEBUG
+*************
+***/
+header {
+    background-color: blueviolet;
+}
 
 /***
 *************
@@ -24,9 +39,26 @@ UTILITY
 
 /***
 *************
+BUTTONS
+*************
+***/
+
+/***
+*************
 HEADER
 *************
 ***/
+header {
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    gap: 10px;
+    align-items: stretch;
+    line-height: 40px;
+}
 
 /***
 *************
