--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ RESET
 COMMON
 *************
 ***/
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
 .flex {
     display: flex;
 }
@@ -48,10 +53,18 @@ button:hover {
 
 button {
     border: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 .primary {
     background-color: #0061ff;
+    padding: 6px 0;
+    color: white;
+}
+
+.secondary {
+    background-color: white;
     padding: 6px 0;
 }
 
@@ -64,14 +77,25 @@ header {
     height: 60px;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
+    margin: 0 15px;
 }
 
 nav ul {
-    gap: 10px;
+    gap: 30px;
 }
 
-nav li button {
+nav button {
     line-height: 60px;
+    background-color: inherit;
+}
+
+nav > .logo {
+    align-items: center;
+}
+
+nav .logo > img {
+    width: 80%;
 }
 
 /***
