--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     font-weight: 300;
     font-size: 13px;
     line-height: 17px;
+    margin-top: 80px;
 }
 
 img {
@@ -34,6 +35,10 @@ img {
     flex-direction: column;
 }
 
+.align {
+    align-items: center;
+}
+
 ul {
     list-style-type: none;
 }
@@ -43,12 +48,12 @@ ul {
 DEBUG
 *************
 ***/
-.columns .small-col {
+.debug .columns .small-col {
     height: 500px;
     background-color: green;
 }
 
-.small-container {
+.debug .small-container {
     background-color: pink;
 }
 
@@ -67,17 +72,34 @@ UTILITY
 }
 
 .small-container {
-    width: 54vw;
+    max-width: 54vw;
     margin: 0 auto;
 }
 
 .small-col {
-    width: calc(100% / 3);
-    margin: 15px;
+    max-width: calc(100% / 3);
+    margin: 25px;
 }
 
 .big-col {
-    width: 100%;
+    max-width: 100%;
+}
+
+.columns {
+    margin: 0 -25px;
+    justify-content: center;
+}
+
+.col-header {
+    padding: 10px 0;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+    border-bottom: 1px solid #d0d0d3;
+}
+
+.col-content {
+    padding: 32px 32px 50px;
 }
 
 /***
@@ -91,13 +113,16 @@ button {
 
 .primary {
     background-color: #0061ff;
+    padding: 11px 0;
+}
+
+.primary > a {
     color: white;
-    padding: 9px 0;
 }
 
 .secondary {
     background-color: white;
-    padding: 6px 0;
+    padding: 11px 0;
 }
 
 .s {
@@ -105,9 +130,13 @@ button {
 }
 
 .m {
-    width: 175px;
+    width: 225px;
 }
 
+.small-col button {
+    width: 100%;
+    margin: 0 auto;
+}
 
 /***
 *************
@@ -116,8 +145,10 @@ LINKS
 ***/
 a {
     font-family: 'Open Sans', sans-serif;
+}
+
+a:not(.link-acquista-ora) {
     text-decoration: none;
-    color: black;
 }
 
 header nav li:hover {
@@ -149,18 +180,14 @@ nav ul {
     gap: 30px;
 }
 
-nav .logo > img {
-    max-width: 80%;
-}
-
-nav li a {
+nav li > a {
     background-color: inherit;
     line-height: 80px;
+    color: black;
 }
 
-nav div {
+header nav li.row {
     align-items: center;
-    margin-left: 20px;
 }
 
 /***
@@ -168,9 +195,6 @@ nav div {
 MAIN
 *************
 ***/
-body {
-    margin-top: 80px;
-}
 
 /***
 *************
@@ -178,19 +202,18 @@ jumbotron
 *************/
 .jumbotron {
     background-color: #b4d0e7;
-    height: 78vh;
-    margin-bottom: 100px;
+    height: 740px;
 }
 
 h1 {
     font-size: 77px;
-    margin-bottom: 40px;
-    line-height: 75px;
+    margin-bottom: 55px;
+    line-height: 95px;
 }
 
 .jumbotron > section {
     position: relative;
-    top: 70px;
+    top: 100px;
 }
 
 .jumbotron section .col-1 {
@@ -202,22 +225,79 @@ h1 {
     width: 70%;
 }
 
+.jumbotron section .col-2 > img {
+    height: 100%;
+}
+
 .jumbotron section .col-1 i {
-    font-size: 40px;
-    margin-top: 40px;
+    font-size: 43px;
+    position: relative;
+    top: 120px;
 }
 
 /***
 *************
 section 2
 *************/
+.section-2 {
+    margin-top: 160px;
+}
+
+.section-2 h2 {
+    font-size: 29px;
+}
+
+.section-2 .radio-input {
+    gap: 50px;
+    margin: 70px 0 25px;
+}
+
 .section-2 .columns .small-col {
+    border: 1px solid #d0d0d3;
+    font-size: 12px;
+}
+
+.section-2 .small-col .col-content h3 {
+    font-size: 16px;
+    margin-bottom: 18px;
+}
+
+.section-2 .col-content .main-infos > div {
+    margin-top: 10px;
+}
+
+.section-2 .col-content {
+    gap: 45px;
+}
+
+.section-2 .col-content ul > li:not(li:last-child) {
+    margin-bottom: 22px;
+}
+
+.section-2 .col-content ul li i {
+    margin-right: 7px;
+}
+
+.section-2 .col-content .punti-salienti ul li {
+    align-items: flex-start;
+}
+
+.section-2 .col-content button {
+    margin-bottom: 30px;
+}
+
+.section-2 .col-content hr {
+    margin-top: 35px;
+    width: 48px;
     border: 1px solid #d0d0d3;
 }
 
-.section-2 .columns {
-    margin: 0 -15px;
-    justify-content: center;
+.section-2 .col-content .punti-salienti h4 {
+    margin-bottom: 30px;
+}
+
+.section-2 .col-content .punti-salienti ul i {
+    color: #0061ff;
 }
 
 /***
