--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ img {
     display: flex;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
+
 .column {
     display: flex;
     flex-direction: column;
@@ -102,7 +106,6 @@ UTILITY
 .columns {
     margin: 0 -25px;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .col-header {
@@ -252,10 +255,6 @@ h1 {
     gap: 25px;
 }
 
-.jumbotron section .big-box > img {
-    height: 100%;
-}
-
 .jumbotron section .small-box i {
     font-size: 43px;
     position: relative;
@@ -301,7 +300,7 @@ section 2
     margin-bottom: 30px;
 }
 
-.section-2 .col-content hr {
+hr {
     margin-top: 35px;
     width: 48px;
     border: 1px solid #d0d0d3;
@@ -359,7 +358,76 @@ section 3
 *************
 section 5
 *************/
-.section-5
+.section-5 {
+    margin-top: 120px;
+}
+
+.section-5 .cube {
+    width: calc(100vw / 3);
+    height: calc(100vw / 3);
+}
+
+.section-5 .cube .inner-cube {
+    width: 50%;
+    height: 50%;
+}
+
+.section-5 .cube .inner-cube,
+.section-5 .cube #designit > div.row {
+    justify-content: center;
+}
+
+.cube img {
+    width: 50%;
+}
+
+#designit {
+    background-color: #d1e9cd;
+    padding: 15px;
+}
+
+#designit > div {
+    background-color: #a2d39b;
+    width: 100%;
+    height: 100%;
+}
+
+#asu {
+    background-color: #61082b;
+}
+
+#u-florida {
+    background-color: #0093ce;
+}
+
+#topps {
+    background-color: #ff1c1c;
+}
+
+.cube-center {
+    padding: 50px;
+    background-color: #f5f5f5;
+}
+
+.cube-center p {
+    margin: 35px 0;
+}
+
+#wbr {
+    background-color: #d5001f;
+}
+
+#hearst {
+    background-color: #b4d0e7;
+}
+
+#lonely-planet {
+    background-color: #0d2481;
+}
+
+#clear-channel {
+    background-color: #ffd830;
+}
 
 
 /***
