--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,16 @@ img {
     flex-direction: column;
 }
 
-.align {
+.align-c {
     align-items: center;
+}
+
+.justify-c {
+    justify-content: center;
+}
+
+.justify-sb {
+    justify-content: space-between;
 }
 
 ul {
@@ -58,6 +66,10 @@ h3 {
     line-height: 23px;
 }
 
+.azure {
+    background-color: #b4d0e7; 
+}
+
 /***
 *************
 DEBUG
@@ -65,14 +77,6 @@ DEBUG
 ***/
 .debug .columns .w-30 {
     height: 500px;
-}
-
-.debug .small-box {
-    background-color: green;
-}
-
-.debug .big-box {
-    background-color: pink;
 }
 
 /***
@@ -87,6 +91,9 @@ UTILITY
 
 .small-container {
     max-width: 1000px;
+}
+
+section {
     margin: 150px auto 0;
 }
 
@@ -96,13 +103,11 @@ UTILITY
 
 .section-2 .columns header {
     padding: 10px 0;
-    justify-content: center;
     gap: 5px;
-    align-items: center;
     border-bottom: 1px solid #d0d0d3;
 }
 
-.col-content {
+article {
     padding: 32px 32px 50px;
 }
 
@@ -203,6 +208,7 @@ body > header {
     top: 0;
     right: 0;
     z-index: 10;
+    box-shadow: 0px 1px 4px 0px rgba(210,210,210,1);
 }
 
 header nav {
@@ -219,10 +225,6 @@ nav li > a {
     color: black;
 }
 
-header nav li.row {
-    align-items: center;
-}
-
 /***
 *************
 MAIN
@@ -233,8 +235,8 @@ MAIN
 *************
 jumbotron
 *************/
-.jumbotron {
-    background-color: #b4d0e7;
+.section-1 {
+    margin-top: 0;
 }
 
 h1 {
@@ -242,16 +244,16 @@ h1 {
     margin-bottom: 50px;
 }
 
-.jumbotron > section {
+.jumbotron {
     position: relative;
     top: 100px;
 }
 
-.jumbotron section .box div.w-30 {
+.jumbotron .box div.w-30 {
     gap: 25px;
 }
 
-.jumbotron section .box div.w-30 i {
+.jumbotron .box div.w-30 i {
     font-size: 43px;
     position: absolute;
     bottom: 120px;
@@ -270,39 +272,40 @@ section 2
     margin-bottom: 30px;
 }
 
-.section-2 .columns > div {
+.section-2 .columns > .col {
     border: 1px solid #d0d0d3;
 }
 
-.section-2 .col-content .main-infos > div {
+.section-2 article .main-infos > div {
     margin-top: 10px;
+    color: #6b7274;
 }
 
-.section-2 .w-30 .col-content {
+.section-2 .w-30 article {
     gap: 45px;
 }
 
-.section-2 .col-content ul > li:not(li:last-child) {
+.section-2 article ul > li:not(li:last-child) {
     margin-bottom: 22px;
 }
 
-.section-2 .col-content ul li i {
+.section-2 article ul li i {
     margin-right: 7px;
 }
 
-.section-2 .col-content .punti-salienti ul li {
+.section-2 article .punti-salienti ul li {
     align-items: flex-start;
 }
 
-.section-2 .col-content button {
+.section-2 .columns article button {
     margin-bottom: 30px;
 }
 
-.section-2 .col-content .punti-salienti h4 {
+.section-2 article .punti-salienti h4 {
     margin-bottom: 30px;
 }
 
-.section-2 .col-content .punti-salienti ul i {
+.section-2 article .punti-salienti ul i {
     color: #0061ff;
 }
 
@@ -311,11 +314,11 @@ section 2
     flex-grow: 1;
 }
 
-.section-2 .columns .col:last-child .col-content {
+.section-2 .columns .col:last-child article {
     justify-content: space-between;
 }
 
-.section-2 .columns .col:last-child .col-content button {
+.section-2 .columns .col:last-child article button {
     width: 240px;
 }
 
@@ -348,6 +351,14 @@ section 3
 
 /***
 *************
+section 4
+*************/
+.section-4 .team {
+    margin-top: 150px;
+}
+
+/***
+*************
 section 5 - SQUARE
 *************/
 .section-5 {
@@ -363,11 +374,6 @@ section 5 - SQUARE
     width: 50%;
     height: 50%;
     position: relative;
-}
-
-.section-5 .square .inner-square,
-.section-5 .square #designit > div.row {
-    justify-content: center;
 }
 
 .square img {
@@ -440,15 +446,7 @@ section 5 - SQUARE
 }
 
 .porta-dropbox {
-    background-color: #b4d0e7;
     height: 358px;
-    justify-content: center;
-    align-items: center;
-}
-
-.porta-dropbox > .small-container {
-    margin-top: 0;
-    justify-content: space-between;
 }
 
 .porta-dropbox h2 {
@@ -470,10 +468,9 @@ section 6
 
 .section-6 .faq div.row {
     margin: 30px 0;
-    justify-content: space-between;
 }
 
-.section-6 .faq div.row > div {
+.section-6 .faq > div.row > div {
     padding: 0 40px;
 }
 
@@ -491,10 +488,9 @@ footer {
 footer .footer-container {
     width: 1200px;
     margin: 0 auto;
-    justify-content: space-between;
 }
 
-footer .footer-columns .col {
+footer .footer-columns .footer-col {
     flex-grow: 1;
 }
 
