--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,11 @@ ul {
     list-style-type: none;
 }
 
+h1 {
+    font-size: 77px;
+    margin-bottom: 50px;
+}
+
 h2 {
     font-size: 30px;
     margin-bottom: 60px;
@@ -62,12 +67,20 @@ h2 {
 
 h3 {
     font-size: 19px;
-    margin-bottom: 18px;
+    margin-bottom: 25px;
     line-height: 23px;
+}
+
+h4 {
+    margin: 40px 0;
 }
 
 .azure {
     background-color: #b4d0e7; 
+}
+
+i {
+    margin-right: 6px;
 }
 
 /***
@@ -94,16 +107,11 @@ UTILITY
 }
 
 section {
-    margin: 150px auto 0;
-}
-
-.columns {
-    justify-content: space-between;
+    margin: 150px auto;
 }
 
 .section-2 .columns header {
     padding: 10px 0;
-    gap: 5px;
     border-bottom: 1px solid #d0d0d3;
 }
 
@@ -144,6 +152,10 @@ button {
     border: none;
 }
 
+button:not(.inizia) {
+    margin-bottom: 35px;
+}
+
 .primary {
     background-color: #0061ff;
     padding: 11px 0;
@@ -166,9 +178,21 @@ button {
     padding: 5px 15px;
 }
 
+.jumbotron button {
+    width: 225px;
+}
+
 .section-2 .w-30 button {
     width: 100%;
-    margin: 0 auto;
+    margin: 50px auto 35px;
+}
+
+.section-2 .columns .col:last-child article button {
+    width: 240px;
+}
+
+.section-5 .porta-dropbox button.secondary {
+    width: 296px;
 }
 
 /***
@@ -211,10 +235,6 @@ body > header {
     box-shadow: 0px 1px 4px 0px rgba(210,210,210,1);
 }
 
-header nav {
-    justify-content: space-between;
-}
-
 nav ul {
     gap: 30px;
 }
@@ -239,11 +259,6 @@ jumbotron
     margin-top: 0;
 }
 
-h1 {
-    font-size: 77px;
-    margin-bottom: 50px;
-}
-
 .jumbotron {
     position: relative;
     top: 100px;
@@ -259,21 +274,17 @@ h1 {
     bottom: 120px;
 }
 
-.jumbotron button {
-    width: 225px;
-}
-
 /***
 *************
 section 2
 *************/
 .section-2 .radio-input {
     gap: 50px;
-    margin-bottom: 30px;
 }
 
 .section-2 .columns > .col {
     border: 1px solid #d0d0d3;
+    margin: 30px 0 20px;
 }
 
 .section-2 article .main-infos > div {
@@ -281,28 +292,8 @@ section 2
     color: #6b7274;
 }
 
-.section-2 .w-30 article {
-    gap: 45px;
-}
-
 .section-2 article ul > li:not(li:last-child) {
     margin-bottom: 22px;
-}
-
-.section-2 article ul li i {
-    margin-right: 7px;
-}
-
-.section-2 article .punti-salienti ul li {
-    align-items: flex-start;
-}
-
-.section-2 .columns article button {
-    margin-bottom: 30px;
-}
-
-.section-2 article .punti-salienti h4 {
-    margin-bottom: 30px;
 }
 
 .section-2 article .punti-salienti ul i {
@@ -310,16 +301,7 @@ section 2
 }
 
 .section-2 .columns > .col:last-child {
-    margin-top: 20px;
     flex-grow: 1;
-}
-
-.section-2 .columns .col:last-child article {
-    justify-content: space-between;
-}
-
-.section-2 .columns .col:last-child article button {
-    width: 240px;
 }
 
 .section-2 .columns .col:last-child p {
@@ -357,14 +339,14 @@ section 4
     margin-top: 150px;
 }
 
+.section-4 h3 {
+    margin-top: 10px;
+}
+
 /***
 *************
 section 5 - SQUARE
 *************/
-.section-5 {
-    margin-top: 120px;
-}
-
 .section-5 .square {
     width: calc(100vw / 3);
     height: calc(100vw / 3);
@@ -441,10 +423,6 @@ section 5 - SQUARE
     margin: 0px;
 }
 
-.porta-dropbox button.secondary {
-    width: 296px;
-}
-
 .porta-dropbox {
     height: 358px;
 }
@@ -457,21 +435,13 @@ section 5 - SQUARE
 *************
 section 6
 *************/
-.section-6 {
-    margin-bottom: 150px;
-}
-
 .section-6 .faq hr {
     color: #999999;
     width: 100%;
 }
 
 .section-6 .faq div.row {
-    margin: 30px 0;
-}
-
-.section-6 .faq > div.row > div {
-    padding: 0 40px;
+    padding-right: 35px;
 }
 
 /***
@@ -510,8 +480,4 @@ footer hr {
 footer .lang {
     color: #999999;
     width: 10%;
-}
-
-footer .lang > div {
-    margin: 50px 0;
 }
