--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,17 @@ i {
     margin-right: 6px;
 }
 
+p {
+    margin-bottom: 35px;
+}
+
+.section-2 hr,
+.section-5 .square-center hr {
+    margin-top: 35px;
+    border: 1px solid #d0d0d3;
+    width: 20%;
+}
+
 /***
 *************
 DEBUG
@@ -108,11 +119,6 @@ UTILITY
 
 section {
     margin: 150px auto;
-}
-
-.section-2 .columns header {
-    padding: 10px 0;
-    border-bottom: 1px solid #d0d0d3;
 }
 
 article {
@@ -158,7 +164,6 @@ button:not(.inizia) {
 
 .primary {
     background-color: #0061ff;
-    padding: 11px 0;
 }
 
 .primary > a {
@@ -167,11 +172,15 @@ button:not(.inizia) {
 
 .secondary {
     background-color: white;
-    padding: 11px 0;
 }
 
 .secondary > a {
     color: black;
+}
+
+button:not(.inizia) > a {
+    padding: 11px 0;
+    display: inline-block;
 }
 
 .primary.inizia {
@@ -226,7 +235,6 @@ HEADER
 body > header {
     height: 80px;
     background-color: white;
-    padding: 0 15px;
     position: fixed;
     left: 0;
     top: 0;
@@ -235,14 +243,11 @@ body > header {
     box-shadow: 0px 1px 4px 0px rgba(210,210,210,1);
 }
 
-nav ul {
-    gap: 30px;
-}
-
 nav li > a {
     background-color: inherit;
     line-height: 80px;
     color: black;
+    padding: 0 20px;
 }
 
 /***
@@ -264,10 +269,6 @@ jumbotron
     top: 100px;
 }
 
-.jumbotron .box div.w-30 {
-    gap: 25px;
-}
-
 .jumbotron .box div.w-30 i {
     font-size: 43px;
     position: absolute;
@@ -278,6 +279,11 @@ jumbotron
 *************
 section 2
 *************/
+.section-2 .columns header {
+    padding: 10px 0;
+    border-bottom: 1px solid #d0d0d3;
+}
+
 .section-2 .radio-input {
     gap: 50px;
 }
@@ -308,22 +314,12 @@ section 2
     margin: 50px 0 10px;
 }
 
-.section-2 hr {
-    margin-top: 35px;
-    border: 1px solid #d0d0d3;
-    width: 20%;
-}
-
 /***
 *************
 section 3
 *************/
 .section-3 .content-box {
     padding: 50px;
-}
-
-.section-3 .content-box p {
-    margin-bottom: 35px;
 }
 
 .section-3 .content-box button {
@@ -399,8 +395,8 @@ section 5 - SQUARE
     overflow-y: auto;
 }
 
-.square-center p {
-    margin: 35px 0;
+.square-center hr {
+    margin-bottom: 35px;
 }
 
 #wbr {
@@ -480,4 +476,6 @@ footer hr {
 footer .lang {
     color: #999999;
     width: 10%;
+    border-top: 1px solid #999999;
+    padding: 50px 0;
 }
